[package]
name = "egui_system_theme"
version = "0.1.1"
edition = "2021"

[features]
# links swift code
dynamic-mac-colors = ["dep:swift-bridge", "dep:swift-bridge-build"]

[target."cfg(target_os = \"macos\")".build-dependencies]
swift-bridge-build = { version = "0.1" , optional = true }

[dependencies]
dark-light = "1.1.1"
egui = "0.29"
once_cell = "1.20.2"

[target.'cfg(target_os = "linux")'.dependencies]
configparser = "3.0.4"
lightningcss = "1.0.0-alpha.57"
palette = "0.7.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Graphics_Gdi"]}
sysinfo = "0.32"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"
swift-bridge = { version = "0.1" , optional = true }

[dev-dependencies]
eframe = "0.29"
egui_demo_lib = "0.29"
